[gd_scene load_steps=5 format=3 uid="uid://cg8j6bp4mente"]

[ext_resource type="Script" path="res://Scenes/PlayerCharacter/PlayerBody/player_character.gd" id="1_1otnj"]
[ext_resource type="SpriteFrames" uid="uid://bx60qqwq21bbg" path="res://Scenes/PlayerCharacter/PlayerBody/Standard/skul_frames.tres" id="2_30mqb"]
[ext_resource type="SpriteFrames" uid="uid://ctoh0yx4fq34t" path="res://Scenes/PlayerCharacter/PlayerBody/Standard/shield_frames.tres" id="3_cikh6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s35b8"]
size = Vector2(238, 290)

[node name="PlayerCharacter" type="Area2D" groups=["mainbody"]]
collision_mask = 6
script = ExtResource("1_1otnj")
max_speed = 15.0
speed_multi = 0.3
line_points_number = 70
distance_points = 7.0
no_mouse_object_hitbox = true
mouse_push_strength = 50

[node name="SpriteSkul" type="AnimatedSprite2D" parent="."]
self_modulate = Color(1, 1, 0.615686, 1)
z_index = 10
scale = Vector2(2, 2)
sprite_frames = ExtResource("2_30mqb")

[node name="HitCollisionPolygon" type="CollisionPolygon2D" parent="."]
position = Vector2(0, -120)
polygon = PackedVector2Array(16, -1, 72, 38, 89, 85, 87, 183, 53, 225, -51, 226, -88, 184, -87, 84, -74, 43, -16, -1)

[node name="Shield" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 1, 0.490196, 0.470588)
z_index = 11
scale = Vector2(2.05, 2.05)
sprite_frames = ExtResource("3_cikh6")

[node name="PickBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="PickupCollisionRect" type="CollisionShape2D" parent="PickBox"]
shape = SubResource("RectangleShape2D_s35b8")

[connection signal="body_entered" from="." to="." method="_on_hitbox_activation"]
[connection signal="body_entered" from="PickBox" to="." method="on_pickbox_activation"]
